# while-i-slept-api

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  DB_SCHEMA.md  DECISIONS.md  INGESTION_ARTICLE_JOBS_FLOW.md
scripts/: build_lambda.sh  build_layer.sh  clean_dynamo_tables.py  create_queues.py  create_table.py  create_tables.py  fetch_rss.py  purge_queue.py
terraform/: .terraform.lock.hcl  README.md  api_gateway.tf  dev.tfvars  eventbridge.tf  iam.tf  lambda_api.tf  lambda_article_processor.tf  lambda_ingestion.tf  lambda_layer.tf  lambda_worker.tf  local.tfvars  locals.tf  main.tf  outputs.tf  prod.tfvars.example  providers.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_article_fetcher.py  test_article_pipeline_article_job_local_consumer.py  test_article_pipeline_article_processor.py  test_article_pipeline_dto.py  test_article_pipeline_infrastructure.py  test_article_pipeline_ingestion.py  test_article_pipeline_keys.py  test_article_pipeline_local_consumer.py  test_article_pipeline_runtime_and_hashing.py  test_article_pipeline_worker.py  test_article_pipeline_worker_adapters.py  test_auth_errors.py  test_auth_exchange_flow.py  test_briefing_service.py  test_content_registry.py  test_content_rss.py  test_content_topics.py  test_dynamodb_repositories_integration.py  test_entitlement_service.py  test_feed_limit_gating.py  test_feed_query_use_case.py  test_feed_router.py  test_fetch_rss_script.py  test_memory_repositories.py  test_oauth_stub_validator.py  test_revenuecat_service.py  test_sleep_window_calculator.py  test_sleep_window_resolver.py  test_smart_brevity_summarizer.py  test_story_dedup.py  test_summarizer_adapters.py  test_summarizer_dto.py  test_summarizer_use_case.py  test_summarizer_worker_additional.py  test_token_service.py  test_users_service.py  (+3 more)
(+98 files in other folders)
