[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "while-i-slept-api"
version = "0.1.0"
description = "Backend API for What Happened While I Slept"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "PyJWT>=2.9,<3.0",
  "boto3>=1.35,<2.0",
  "feedparser>=6.0,<7.0",
  "requests>=2.32,<3.0",
  "trafilatura>=1.12,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: tests that require LocalStack/DynamoDB",
]

[tool.coverage.run]
branch = true
source = ["while_i_slept_api"]
omit = [
  "src/while_i_slept_api/__init__.py",
  "src/while_i_slept_api/*/__init__.py",
  "src/while_i_slept_api/*/*/__init__.py",
  "src/while_i_slept_api/main.py",
  "src/while_i_slept_api/api/*",
  "src/while_i_slept_api/dependencies/*",
  "src/while_i_slept_api/core/config.py",
  "src/while_i_slept_api/repositories/base.py",
  "src/while_i_slept_api/repositories/dynamodb.py",
  "src/while_i_slept_api/domain/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 85
omit = [
  "src/while_i_slept_api/__init__.py",
  "src/while_i_slept_api/*/__init__.py",
  "src/while_i_slept_api/*/*/__init__.py",
  "src/while_i_slept_api/main.py",
  "src/while_i_slept_api/api/*",
  "src/while_i_slept_api/dependencies/*",
  "src/while_i_slept_api/core/config.py",
  "src/while_i_slept_api/repositories/base.py",
  "src/while_i_slept_api/repositories/dynamodb.py",
  "src/while_i_slept_api/domain/*",
]
